# RGBEPP

./: CMakeLists.txt  README.md  RGBEPP.d  RGBEPP.sh  batch.sh  config.example  countTaxa.d  delstop.cpp  delstop.d  dub.sdl  sortdiamond.cpp  splitfasta.cpp
